--- a/views/admin-lte/mainMenu.ejs
+++ b/views/admin-lte/mainMenu.ejs
@@ -93,13 +93,16 @@
         <ul class="nav navbar-nav" ng-hide="user == null">
             <li class="dropdown">
                 <a href="" class="dropdown-toggle" data-toggle="dropdown">Favorites <span class="caret"></span></a>
+
                 <ul class="dropdown-menu" role="menu" ng-controller="FavoritesController">
-                    <li ng-show="favorites != null" ng-repeat="fav in favorites">
+
+                    <li ng-show="favorites.length > 0" ng-repeat="fav in favorites">
                         <a href="/course/{{fav.course.slug}}/#/cid/{{fav.course._id}}?tab=preview">
                             {{fav.course.name | cut:true:30:' ...'}}
                         </a>
                     </li>
-                    <li ng-show="favorites == null">
+
+                    <li ng-show="favorites.length <= 0">
                         <a href="">
                             <span>
                                 You do not have any favorite courses, yet!
