--- a/views/admin-lte/course/peerAssessment/peerReview/components/blindness.ejs
+++ b/views/admin-lte/course/peerAssessment/peerReview/components/blindness.ejs
@@ -9,6 +9,9 @@
                 <div class="col-sm-2">
                     <label class="radio-inline"><input type="radio" name="blindness" ng-model="newAssignObj.reviewSettings.blind" value="double">Double</label>
                 </div>
+                <div class="col-sm-2">
+                    <label class="radio-inline"><input type="radio" name="blindness" ng-model="newAssignObj.reviewSettings.blind" value="none">None</label>
+                </div>
             </div>
         </div>
     </fieldset>
