--- a/views/admin-lte/course/peerAssessment/peerReview/components/reviewAssignment.ejs
+++ b/views/admin-lte/course/peerAssessment/peerReview/components/reviewAssignment.ejs
@@ -1,7 +1,7 @@
 <div class="form-horizontal horizontal-max" ng-controller="ReviewAssignmentTypeController">
     <fieldset>
         <div class="form-group">
-            <label class="col-sm-5 control-label">Assignment</label>
+            <label class="col-sm-5 control-label">Mapping</label>
             <div class="col-sm-7">
                 <div class="col-sm-3">
                     <label class="radio-inline"><input type="radio" name="assignmentType" ng-model="newAssignObj.reviewSettings.reviewAssignment" value="single">1-to-1</label>
