--- a/views/admin-lte/course/peerAssessment/peerReview/pages/editAssignment.ejs
+++ b/views/admin-lte/course/peerAssessment/peerReview/pages/editAssignment.ejs
@@ -9,9 +9,9 @@
                         </div>
                         <div class="box-body">
                             <div class="tabbable">
-                                <ul class="nav nav-tabs nav-justified" id="tabContent">
+                                <ul class="nav nav-tabs nav-justified" id="tabContent" style="background-color: gainsboro;">
                                     <li class="active"><a data-toggle="tab" data-target="#editBasicTab">Basic</a></li>
-                                    <li><a data-toggle="tab" data-target="#editAdvancedTab">Advanced</a></li>
+                                    <li><a data-toggle="tab" data-target="#editAdvancedTab">Review Settings</a></li>
                                 </ul>
                                 <div class="tab-content">
                                     <div id="editBasicTab" class="tab-pane fade in active">
@@ -147,6 +147,8 @@
                                         <% include ../components/reviewAssignment %>
                                         <% include ../components/loop %>
                                         <% include ../components/blindness %>
+                                        <% include ../components/reviewPercentage %>
+                                        <% include ../components/rubrics/rubrics %>
                                     </div>
                                 </div>
                             </div>
