--- a/views/admin-lte/mainMenu.ejs
+++ b/views/admin-lte/mainMenu.ejs
@@ -15,7 +15,7 @@
 
     <nav class="navbar navbar-static-top" role="navigation" ng-controller="MainMenuController">
 
-        <form class="navbar-form navbar-left search-box" role="search" ng-controller="SearchBoxController">
+        <form class="navbar-form navbar-left search-box hidden-xs" role="search" ng-controller="SearchBoxController">
             <div class="input-group search">
                 <input class="form-control" id="navbar-search-input" type="text" placeholder="Search" autocomplete="off"
                        ng-model="queryText" ng-model-options="{debounce: 300}">
@@ -91,7 +91,7 @@
             </div>
         </form>
 
-        <ul class="nav navbar-nav" ng-hide="user == null">
+        <ul class="nav navbar-nav hidden-xs" ng-hide="user == null">
             <li class="dropdown">
                 <a href="" class="dropdown-toggle" data-toggle="dropdown">Favorites <span class="caret"></span></a>
 
@@ -194,7 +194,6 @@
                         <span ng-show="user.displayName" class="hidden-xs">{{user.displayName | capitalize:true}}</span>
                     </a>
                     <ul class="dropdown-menu">
-
                         <li>
                             <!-- inner menu: contains the actual data -->
                             <ul class="menu">
