amaps tooltip added

--- a/views/admin-lte/cm-admin/header.ejs
+++ b/views/admin-lte/cm-admin/header.ejs
@@ -15,6 +15,7 @@
     <link href="/bower/AdminLTE/dist/css/skins/skin-blue.min.css" rel="stylesheet" type="text/css"/>
     <link href="/css/app.css" rel="stylesheet" type="text/css"/>
     <link href="/css/admin.css" rel="stylesheet" type="text/css"/>
+    <link href="/css/global.css" rel="stylesheet" type="text/css"/>
 
     <!-- Extras -->
     <link href="/bower/angular-toastr/dist/angular-toastr.min.css" rel="stylesheet" type="text/css"/>
