--- a/views/admin-lte/header.ejs
+++ b/views/admin-lte/header.ejs
@@ -17,6 +17,7 @@
     <!-- Themes -->
     <link href="/css/AdminLTE.min.css" rel="stylesheet" type="text/css"/>
     <link href="/bower/AdminLTE/dist/css/skins/skin-blue.min.css" rel="stylesheet" type="text/css"/>
+    <link href="/css/global.css" rel="stylesheet" type="text/css"/>
     <link href="/css/app.css" rel="stylesheet" type="text/css"/>
     <link href="/css/posts.css" rel="stylesheet" type="text/css"/>
     <link href="/bower/jquery-ui/themes/black-tie/jquery-ui.css" rel="stylesheet" type="text/css">
