add created courses too

--- a/views/my-course/participation-balance.ejs
+++ b/views/my-course/participation-balance.ejs
@@ -7,8 +7,13 @@
         </ul>
     </script>
 
+    <h3>Enrolled</h3>
     <ul>
         <li ng-repeat="field in courses.enrolled" ng-include="'field_renderer.html'"></li>
     </ul>
 
+    <h3>Created</h3>
+    <ul>
+        <li ng-repeat="field in courses.created" ng-include="'field_renderer.html'"></li>
+    </ul>
 </div>
