--- a/views/my-course/participation-balance.ejs
+++ b/views/my-course/participation-balance.ejs
@@ -1,10 +1,14 @@
-<div class="box-body no-padding" ng-controller="ParticipationBalanceController">
+<div class="box-body no-padding  panel-heading" ng-controller="ParticipationBalanceController">
 
-    <script type="text/ng-template" id="field_renderer.html">
-        {{field.name}}
-        <ul>
-            <li ng-repeat="field in field.childrens" ng-include="'field_renderer.html'"></li>
-        </ul>
+    <!--  Recursive template  -->
+    <script class="panel-collapse collapse" type="text/ng-template" id="field_renderer.html">
+        <div>
+            <a>{{field.name}}</a>
+            <ul>
+                <li ng-repeat="field in field.childrens" ng-include="'field_renderer.html'"></li>
+            </ul>
+        </div>
+
     </script>
 
     <h3>Enrolled</h3>
