--- a/views/admin-lte/catalogs/nodeDetail.ejs
+++ b/views/admin-lte/catalogs/nodeDetail.ejs
@@ -1,11 +1,18 @@
 <% if(isInIframe && treeNode && treeNode.settings && treeNode.settings['disableTop']){ %>
+  <% if(isInIframe &&
+        (
+          (treeNode && treeNode.settings && treeNode.settings['disableTop']) ||
+          (course && course.settings && course.settings['disableTop'])
+        )
+       ){ %>
 <% } else { %>
-  <section class="content-header">
-      <ol class="breadcrumb">
+<section class="content-header main-breadcrumb">
+    <ol class="breadcrumb">
         <li><a href="/"><i class="fa fa-home"></i> Home</a></li>
         <li><a href="/courses/#/category/{{course.category.slug}}%>"> </i> {{course.category.name}}</a></li>
     </ol>
 </section>
+<% } %>
 <% } %>
 <section class="content-header action-header red">
     <li class="visible-sm-inline-block visible-xs-inline-block draw-tab-button">
