revert to privacy for content nodes only

--- a/views/admin-lte/course/map/map.ejs
+++ b/views/admin-lte/course/map/map.ejs
@@ -5,7 +5,7 @@
          ng-class="{'owned': isAuthorized(data), 'deleted': data.isDeleted}"
          ng-hide="data.isDeletedForever">
 
-        <div class="privacy-icon" ng-show="isAuthorized(data)">
+        <div class="privacy-icon" ng-show="isAuthorized(data) && data.type=='contentNode'">
             <i class="fa fa-lock" ng-show="data.isPrivate"></i>
             <i class="fa fa-unlock" ng-show="!data.isPrivate"></i>
         </div>
