--- a/views/admin-lte/course/map/addContentNodeModal.ejs
+++ b/views/admin-lte/course/map/addContentNodeModal.ejs
@@ -26,8 +26,11 @@
                                      ng-class="{ 'has-error' : addContentNodeForm.name.$invalid && !addContentNodeForm.$pristine }">
                                     <input type="text" id="name" name="name" placeholder="" class="form-control"
                                            ng-model="formData.name"
-                                           required ng-required="true"
-                                    >
+                                           required ng-required="true">
+                                    <label>
+                                        <input type="checkbox" ng-model="formData.isPrivate">
+                                        Is private
+                                    </label>
 
                                     <p ng-show="addContentNodeForm.name.$invalid && !addContentNodeForm.$pristine"
                                        class="help-block">Content Node Name is required.</p>
